fix highlight spacing

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -6,7 +6,7 @@
   background-color: $color-facebook
 
 .highlight
-  padding: $margin-tiny
+  padding: $margin-tiny 0
   box-shadow: 1.7 * $margin-tiny 0 0 var(--fourth-color), 1.7 * $margin-tiny * -1 0 0 var(--fourth-color)
 
 .content-copy
